# nutri_agent

./: .env  .env.example  .gitignore  README.md  SETUP_FROM_CLONE.md  ai_nutrition_calculator.py  ai_nutrition_config.json  ai_nutrition_results.json  config.json  docker-compose.prod.yml  docker-compose.yml  plan.md  product.md  ыы.md
.claude/skills/generate-meal-plan/: SKILL.md
.claude/skills/generate-weekly-plan/: SKILL.md
.claude/skills/manage-users/: SKILL.md
.claude/skills/setup-infrastructure/: SKILL.md
backend/: .dockerignore  Dockerfile  alembic.ini  cli.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4f1df7d14a20_add_profile_preferences_fields.py  736cb0124824_init_tables.py  a3b5c7d9e1f2_add_recipe_enrichment_fields.py  b4c6d8e0f2a3_add_user_meal_schedule.py  c9d4e8f1a2b3_add_recipe_candidate_workflow.py  d2e4f6a8b0c1_add_source_candidate_workflow.py  f1a2b3c4d5e6_add_candidate_provenance_fields.py
backend/app/: config.py  logging.py  main.py
backend/app/api/: schemas.py
backend/app/api/routes/: catalog.py  plans.py  recipes.py  users.py
backend/app/core/: agent_cli_runtime.py  cache.py  canonical_pipeline.py  catalog_agent_runtime.py  catalog_agents.py  catalog_ingest.py  catalog_sources.py  cli_contract.py  day_plan_repair.py  demo_pipeline.py  generation_meta.py  recipe_catalog.py  source_discovery.py  source_discovery_runtime.py  source_harvester.py  source_policy.py
backend/app/core/agent/: orchestrator.py  schemas.py
backend/app/core/agent/prompts/: catalog_ingest.yml  meal_plan.yml
backend/app/core/rag/: retriever.py
backend/app/core/skills/: aggregator.py  calculator.py  ics_export.py  validator.py
backend/app/db/: models.py  session.py
backend/app/worker/: __init__.py  tasks.py
backend/config/: catalog_source_policy.yml
backend/data/: recipes.json
backend/scripts/: enrich_recipes.py  ingest_catalog_batch.py  ingest_external_catalog_batch.py  seed_recipes.py  validate_catalog_state.py
backend/tests/: test_agent_cli_runtime.py  test_aggregator.py  test_calculator.py  test_canonical_pipeline.py  test_catalog_agent_runtime.py  test_catalog_agents.py  test_catalog_discovery_routes.py  test_catalog_ingest.py  test_catalog_routes.py  test_catalog_sources.py  test_catalog_worker.py  test_demo_pipeline.py  test_orchestrator.py  test_plan_routes.py  test_recipe_catalog.py  test_retriever.py  test_source_discovery.py  test_source_discovery_runtime.py  test_source_discovery_worker.py  test_source_harvester.py  test_source_policy.py  test_validator.py
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/src/components/: NutriOnboardingApp.tsx
frontend/src/layouts/: BaseLayout.astro
frontend/src/pages/: index.astro
frontend/src/styles/: global.css
