[project]
name = "nutri-agent-backend"
version = "0.1.0"
description = "NutriAgent backend API and meal-plan orchestrator"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "uvicorn[standard]>=0.42.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pgvector>=0.4.2",
    "celery[redis]>=5.6.3",
    "redis>=6.4.0",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-ai>=1.75.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "alembic/versions/*.pyc",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F401"]
